# bullviso

./: .gitignore  README.md  pyproject.toml  setup.py
bullviso/: __init__.py  __main__.py  barcodes.py  cli.py  confcodes.py  conformers.py  core.py  geoms.py  graphs.py  io.py  rdkit.py  substituents.py  utils.py  xtb_wrapper.py
bullviso/assets/banners/: banner.txt
bullviso/structures/: bv.sdf  bv_ts.sdf
bullviso/utils/: __init__.py  list_utils.py  rdkit_utils.py
pybull/: confcodes.py  geo.py  geoms.py  utils.py
