[project]
name = "bullviso"
version = "3.0.0"
description = """
A Python package for generating 3D molecular structures of the
constitutional, configurational, and conformational isomers of
functionalised bullvalenes
"""
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "networkx>=3.4.2",
    "rdkit>=2025.03.5",
    "tqdm>=4.67.1",
    "typer>=0.16.1",
]

[tool.setuptools]
packages = [
    "bullviso"
]

[tool.setuptools.package-data]
"bullviso.structures" = ["*.sdf"]
"bullviso.assets.banners" = ["banner.txt"]

[project.scripts]
bullviso = "bullviso:cli.app"
