[project]
name = "bullviso"
version = "4.0.3"
description = """
A Python package for generating 3D molecular structures of the
constitutional, configurational, and conformational isomers of
functionalised bullvalenes
"""
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "rdkit>=2025.03.5",
    "tqdm>=4.67.1",
    "typer>=0.16.1",
]

[tool.setuptools]
packages = { find = {} }
include-package-data = true

[tool.setuptools.package-data]
"bullviso.assets" = ["**/*"]
"bullviso.structures" = ["*.sdf"]

[project.scripts]
bullviso = "bullviso:cli.app"
